Openllet,DLEJena2/dlejena_v2.0/output_ApacheMavenMultipleJars/TBoxInconsistency_compile.txt
examples\TBoxInconsistency.java:3: error: package dlejena does not exist
import dlejena.DLEJenaReasoner;
              ^
examples\TBoxInconsistency.java:28: error: cannot find symbol
        DLEJenaReasoner dle = new DLEJenaReasoner();
        ^
  symbol:   class DLEJenaReasoner
  location: class TBoxInconsistency
examples\TBoxInconsistency.java:28: error: cannot find symbol
        DLEJenaReasoner dle = new DLEJenaReasoner();
                                  ^
  symbol:   class DLEJenaReasoner
  location: class TBoxInconsistency
3 errors
